Fix off-centered content when smallish window

--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,20 @@ p {
     padding-bottom: 70px;
 }
 
+.center {
+    margin-left: 50%;
+    transform: translate(-50%);
+    -ms-transform: translate(-50%)
+}
+
+@media screen and (max-width: 768px) {
+    .center {
+        margin-left: 0%;
+        transform: translate(-0%);
+        -ms-transform: translate(-0%)
+    }
+}
+
 .container-fluid {
     margin-left: auto;
     margin-right: auto;
